add country detail page

--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,3 +1,10 @@
 .active {
     color: green !important;
 }
+.navbar {
+    background-color: rgba(255, 166, 0, 0.808) !important;
+}
+.nav-link {
+    color: black !important;
+    font-weight: bold;
+}
