--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -1,3 +1,5 @@
 <div class="card-container">
-    <app-card *ngFor="let country of CountryDataService.countries" [countries]="country"></app-card>
+    <a routerLink="/details/{{country.id}}" *ngFor="let country of CountryDataService.countries">
+        <app-card  [countries]="country"></app-card>
+    </a>
 </div>
