--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -3,6 +3,7 @@
     <div class="card-body">
       <h5 class="card-title">{{countries.name}}</h5>
       <p class="card-text">{{countries.about}}</p>
-      <a href="#" class="btn btn-primary">Visit {{countries.name}}</a>
+      <a href="#" class="btn btn-primary">See more</a>
+      <code>ID : {{countries.id}}</code>
     </div>
   </div>
