--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -1,5 +1,7 @@
+<input type="text" placeholder="search" [formControl]="search">
+
 <div class="card-container">
-    <a routerLink="detail/{{country.id}}" *ngFor="let country of CountryDataService.countries">
+    <a routerLink="detail/{{country}}" *ngFor="let country of filteredCountry">
         <app-card  [countries]="country"></app-card>
     </a>
 </div>
