add filter from header

--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -1,7 +1,7 @@
-<input type="text" placeholder="search" [formControl]="search">
+<h1>Input Value: {{ inputValue }}</h1>
 
 <div class="card-container">
-    <a routerLink="detail/{{country}}" *ngFor="let country of filteredCountry">
+    <a routerLink="detail/{{country}}" *ngFor="let country of filteredCountries ">
         <app-card  [countries]="country"></app-card>
     </a>
 </div>
