--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -53,16 +53,11 @@
           <a class="nav-link disabled">Disabled</a>
         </li>
       </ul>
-      <form class="d-flex" role="search">
-        <input
-          class="form-control me-2"
-          type="search"
-          placeholder="Search"
-          aria-label="Search"
-          
-        />
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      </form>
+      <div class="d-flex" role="search">
+        <input [(ngModel)]="inputValue" placeholder="Enter text">
+        <button (click)="sendData()">Send Data</button>
+        
+      </div>
     </div>
   </div>
 </nav>
