--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -1,1 +1,9 @@
-<p>list works!</p>
+
+<ng-container *ngIf="data$ | async as data">
+    <h1>Categories</h1>
+    <div  class="card" *ngFor="let category of data.categories">
+        <div class="card-body">
+            <h3>{{category.title}}</h3>
+        </div>
+    </div>
+</ng-container>
