--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -3,7 +3,9 @@
     <h1>Categories</h1>
     <div  class="card" *ngFor="let category of data.categories">
         <div class="card-body">
-            <h3>{{category.title}}</h3>
+            <h3 [innerHTML]="category.title"></h3>
+            <p [innerHTML]="category.descr"></p>
+            <div [innerHTML]="category.metaAuthor"></div>
         </div>
     </div>
 </ng-container>
