--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
-<div class="container">
+<div class="container d-grid container ng-star-inserted">
   <router-outlet> </router-outlet>
 </div>
 <app-footer></app-footer>
