--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -28,8 +28,8 @@
           >
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLinkActive="action"
-            >empty</a
+          <a class="nav-link" routerLinkActive="action" routerLink="/login"
+            >Log in</a
           >
         </li>
         <li class="nav-item dropdown">
