--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,2 +1,3 @@
-<a class="btn btn-primary" >რეგისტრაცია</a>
-<a class="btn btn-secondary" routerLink="">ავტორიზაცია</a>
+<a class="btn btn-primary" routerLink="login/registration">რეგისტრაცია</a>
+<a class="btn btn-secondary" routerLink="login/authorization">ავტორიზაცია</a>
+<router-outlet></router-outlet>
