--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,4 +2,4 @@
 <div class="container d-grid container ng-star-inserted">
   <router-outlet> </router-outlet>
 </div>
-<app-footer></app-footer>
+<!-- <app-footer></app-footer> -->
