--- a/src/app/login/authorization/authorization.component.html
+++ b/src/app/login/authorization/authorization.component.html
@@ -1,1 +1,20 @@
-<h1>Authorization</h1>
+<form [formGroup]="form" class="card">
+    <div class="form-group" class="card-body">
+      
+      <label>Email address</label>
+      <input type="email" class="form-control" formControlName="email" />
+      <div class="form-group">
+        <label>Password</label>
+        <input type="password" class="form-control" formControlName="password" />
+      </div>
+    </div>
+    <button
+      type="submit"
+      class="btn btn-primary mt-3"
+      (click)="submit()"
+      [disabled]="form.invalid">
+      ავტორიზაცია
+    </button>
+    {{form.value | json}}
+  </form>
+  
